<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Snitch Academy Clipboard</string>
    <string name="title_participant_detail">Participant Detail</string>

    <string name="pokerface">Pokerface</string>
    <string name="arena">Arena</string>
    <string name="endurance_arena">Endurance Arena</string>
    <string name="no_contact">No Contact</string>
    <string name="blockade">Blockade</string>
    <string name="chase_plus">Chase Pluse</string>

    <string name="enter_name">Please enter a name or cancel.</string>
</resources>
