<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ParticipantDetailFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/participant_name"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical">

            <com.sababado.snitchacademy.ins.view.DrillRatingsView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pokerface"
                app:title="@string/pokerface" />

            <com.sababado.snitchacademy.ins.view.DrillRatingsView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/arena"
                app:title="@string/arena" />

            <com.sababado.snitchacademy.ins.view.DrillRatingsView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/endurance_arena"
                app:title="@string/endurance_arena" />

            <com.sababado.snitchacademy.ins.view.DrillRatingsView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/no_contact"
                app:title="@string/no_contact" />

            <com.sababado.snitchacademy.ins.view.DrillRatingsView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/blockade"
                app:title="@string/blockade" />

            <com.sababado.snitchacademy.ins.view.DrillRatingsView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chase_plus"
                app:title="@string/chase_plus" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>